--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,10 +10,14 @@
   }
 }
 
-html,
+html {
+  min-width: 1280px;
+}
+
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  overflow-y: scroll;
+  overscroll-behavior-y: none;
+  min-height: 100vh;
 }
 
 body {
@@ -28,6 +32,7 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  scrollbar-width: thin;
 }
 
 a {
